# confpass

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PRIVACY.md  README.md  SECURITY.md  index.html  manifest-firefox.json  package-lock.json  package.json  register_host.bat  tsconfig.json
.github/workflows/: release.yml
_ext_tmp/browser-extension/: content.js  manifest.json
browser-extension/: background.js  content.js  install-host.ps1  install-host.sh  manifest.json  native-messaging-host.json  popup.html  popup.js  webauthn-injector.js
scripts/: bump-version.cjs  bump-version.js  create-release.ps1  generate-manifest.cjs
src/: App.css  App.tsx  constants.ts  main.tsx  types.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/native-messaging-host/: Cargo.toml
src-tauri/native-messaging-host/src/: main.rs
src-tauri/src/: lib.rs  main.rs
src/components/: ActivityLogModal.tsx  AddAuthenticatorModal.tsx  AuthenticatorView.tsx  Dashboard.tsx  EntryCard.tsx  ErrorBoundary.tsx  PasskeysView.tsx  PasswordGeneratorModal.css  PasswordGeneratorModal.tsx  SecurityCheckPage.tsx  Settings.css  Settings.tsx  TotpModal.tsx
src/hooks/: useBiometric.ts  useBreachDetection.ts  useDebounce.ts  useErrorHandler.ts  usePasswordSecurity.ts  useUpdateCheck.ts
src/hooks/__tests__/: useDebounce.test.ts
src/stores/: vaultStore.ts
src/utils/__tests__/: validation.test.ts
