[workspace]
members = ["native-messaging-host"]

[package]
name = "confpass"
version = "1.6.13"
description = "Modern Password Manager by emreconf"
authors = ["emreconf"]
edition = "2021"

[lib]
name = "confpass_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-biometric = "2"
tauri-plugin-fs = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
windows = { version = "0.58", features = [
    "Security_Credentials_UI",
    "Foundation",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_Graphics_Dwm"
] }
keyring = "2.3.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
argon2 = "0.5"
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.22"
uuid = { version = "1.0", features = ["v4"] }
url = "2.5"
once_cell = "1.20"
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
sha2 = "0.10"
pbkdf2 = "0.12"
zeroize = { version = "1.7", features = ["zeroize_derive"] }
winreg = "0.52"
totp-lite = "2.0"
qrcode = "0.14"
image = "0.25"
reqwest = { version = "0.12", features = ["json"] }
chrono = "0.4"
sha1 = "0.10"
base32 = "0.4"
# url = "2.5" - already added above
enigo = "0.2"
active-win-pos-rs = "0.8"
rdev = "0.5"
