[package]
name = "confpass-native-host"
version = "1.6.NaN"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1.20"
uuid = { version = "1.0", features = ["v4"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }

